<resources>
    <string name="app_name">Enigma Chat</string>
    <string name="developed">Developed By DM TechHub</string>
    <string name="num_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="mobile">Mobile</string>
    <string name="send_otp">SEND OTP</string>
    <string name="please_enter_your_otp">Please Enter Your OTP</string>
    <string name="otp_otp">OTP</string>
    <string name="next_otp">NEXT</string>
    <string name="resend_otp_in_30_sec">Resend OTP in 30 sec</string>
    <string name="enter_the_user_name">Enter The UserName</string>
    <string name="finish">FINISH</string>
    <string name="username">UserName</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_screen">Chat Screen</string>
    <string name="profile_screen">Profile Screen</string>
    <string name="username_search">Username</string>
    <string name="search_user">Search User</string>
    <string name="user_name_recycler">User name</string>
    <string name="_000000000000">+000000000000</string>
    <string name="usename_chat">Usename</string>
    <string name="write_message_here">Write message here</string>
    <string name="write_message_here1">Write message here</string>
    <string name="hello">Hey I am fine</string>
    <string name="hello2">Hello How are you?</string>
    <string name="username_profile">Username</string>
    <string name="phone_profile_f">Phone</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Logout</string>
</resources>