<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragement"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/circular_bg"
        android:backgroundTint="@color/chat_color_sender"
        android:src="@drawable/person_icon"
        android:scaleType="centerCrop"
        android:layout_marginBottom="40dp"
        android:id="@+id/profile_image_view"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/username_profile"
        android:inputType="text"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="5dp"
        android:id="@+id/profile_username"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/phone_profile_f"
        android:inputType="text"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="5dp"
        android:enabled="false"
        android:id="@+id/profile_phonep"
        />


    <Button
        android:id="@+id/profle_update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_rounded_corner"
        android:text="@string/update_profile" />

        <TextView
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/logout" />


    <ProgressBar
        android:id="@+id/profile_progress_bar"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:indeterminateTint="@color/chat_color_sender" />

</LinearLayout>